# mundi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  meson.build
.github/workflows/: ci.yml
data/: io.github.nacho.learn-maps.desktop.in  io.github.nacho.learn-maps.gschema.xml  io.github.nacho.mundi.desktop.in  io.github.nacho.mundi.gschema.xml  io.github.nacho.mundi.metainfo.xml  meson.build
po/: LINGUAS  POTFILES.in  es.po  gl.po  it.po  meson.build  mundi.pot  pl.po
resources/: resources.gresource.xml  style.css
resources/gtk/: menus.ui
resources/ui/: map_exercise_view.ui  map_quiz_view.ui  window.ui
src/: application.rs  config.rs.in  main.rs  map_exercise_view.rs  map_quiz_view.rs  map_widget.rs  quiz.rs  region_names.rs  registry.rs  window.rs
