[package]
name = "mundi"
version = "0.5.0"
edition = "2021"

[dependencies]
gtk = { version = "0.11", package = "gtk4", features = ["v4_14"] }
libadwaita = { version = "0.9", package = "libadwaita", features = ["v1_5"] }
gio = "0.22"
glib = { version = "0.22", features = ["log_macros"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
i18n-format = "0.4"
anyhow = "1.0"
rand = "0.10"
quick-xml = "0.39"

[build-dependencies]
glib-build-tools = "0.22"
regex = "1.11"
